# zerogpu-api-sdk

./: .gitignore  README.md  go.work
.github/workflows/: publish-npm.yml  publish-pypi.yml
fern/: .gitignore  fern.config.json  generators.yml
npm/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
pypi/: .gitignore  README.md  pyproject.toml
pypi/src/zerogpu/: __init__.py  client.py  environment.py  reference.md
pypi/src/zerogpu/core/: client_wrapper.py
pypi/src/zerogpu/errors/: method_failure_error.py
pypi/src/zerogpu/responses/: __init__.py  client.py  raw_client.py
pypi/src/zerogpu/responses/types/: __init__.py  create_response_request_input.py
pypi/src/zerogpu/types/: __init__.py  chat_message.py  chat_message_role.py  error_response.py  output_content_block.py  output_message.py  response.py  text_response_config_format.py
scripts/: sync-pypi-from-sdks.sh
sdks/csharp/: ZerogpuApi.slnx
sdks/go/: environments.go  error_codes.go  errors.go  reference.md  responses.go  responses_test.go  types.go
sdks/python/: __init__.py  client.py  reference.md
sdks/ruby/: README.md  custom.gemspec.rb  reference.md  zerogpu.gemspec
sdks/rust/: Cargo.toml  README.md  reference.md
sdks/typescript/: BaseClient.ts  Client.ts  environments.ts  index.ts
smoke/: README.md  run-all.sh
smoke/csharp/: Program.cs  Smoke.csproj
smoke/go/: go.mod  go.sum  main.go
smoke/java/: pom.xml
smoke/php/: composer.json  smoke.php
smoke/python/: requirements.txt  smoke.py
specs/: zerogpu.openapi.yaml
typescript-smoke/: smoke.ts
(+336 files in other folders)
