[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerogpu-api"
version = "0.1.3"
description = "Official ZeroGPU Python SDK (Responses API and Chat Completions)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "twine>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zerogpu"]
